<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/menu_favorites_title_text"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/playlist"
        android:icon="@drawable/ic_baseline_playlists"
        android:title="@string/menu_selections_title_text"
        app:showAsAction="withText"/>

    <item
    android:id="@+id/settings"
    android:icon="@drawable/ic_baseline_settings"
    android:title="@string/menu_settings_title_text"
    app:showAsAction="withText"/>
</menu>
