<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toptracks"
    android:visibility="invisible"
    tools:visibility="visible"
    android:background="@drawable/background_home"
    tools:context=".view.fragments.TopTracksFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:background="@drawable/background_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

...
