<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/playlists"
    android:visibility="invisible"
    tools:visibility="visible"
    tools:context=".view.fragments.PlaylistFragment">

</FrameLayout>